<resources>
    <string name="app_name">Heart Disease Predictor</string>
    <string name="hindi" translatable="false">हिन्दी</string>
    <string name="india" translatable="false">India</string>
    <string name="pref_select_lang" translatable="false">select_language</string>
    <string name="choose_your_preferred_language">Choose Your Preferred Language</string>
    <string name="please_select_your_language">Please select your language</string>
    <string name="continue_string">Continue</string>
    <string name="change_language">Change Language</string>
    <string name="home">Home</string>
    <string name="reports">Reports</string>
    <string name="articles">Articles</string>
    <string name="videos">Videos</string>
    <string name="helpful_articles">Helpful Articles</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="helpful_videos">Helpful Videos</string>
    <string name="test_taken_on">Test Taken On</string>
    <string name="risk_of_heart_disease">Risk of Heart Disease</string>
    <string name="home_details">Heart disease is the leading cause of death in both men and women. 28% deaths in India were due to a heart disease in 2016.\n\nMachine Learning can play an essential role in predicting presence/absence of Locomotor disorders, Heart diseases and more.\n\nSuch information, if predicted well in advance, can provide important insights to doctors who can then adapt their diagnosis and treatment per patient basis.</string>
    <string name="home_welcome">Welcome!</string>
    <string name="take_the_test_now">Take the test now</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_id">Patient ID</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="chest_pain_type">Chest Pain Type</string>
    <string name="fasting_blood_sugar_120_mg_dl"><![CDATA[Fasting Blood Sugar > 120 mg/dl]]></string>
    <string name="resting_ecg">Resting ECG</string>
    <string name="exercise_induced_angina">Exercise Induced Angina</string>
    <string name="slope_of_peak_exercise_st_segment">Slope of Peak Exercise ST Segment</string>
    <string name="no_of_major_vessels_colored_flourosopy">No of Major Vessels colored (Flourosopy)</string>
    <string name="thalium_stress_result">Thalium Stress Result</string>
    <string name="resting_blood_pressure_in_mm_hg">Resting Blood Pressure (in mm Hg)</string>
    <string name="serum_cholestoral_in_mg_dl">Serum Cholestoral (in mg/dl)</string>
    <string name="maximum_heart_rate_achieved">Maximum Heart Rate Achieved</string>
    <string name="st_depression_induced_by_exercise">ST Depression Induced by Exercise</string>
    <string name="predict">Predict</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="unknown">Unknown</string>
    <string name="no_internet">Make sure you are connected to Internet</string>
    <string name="risk_message">Patient has a significant risk of a heart disease!</string>
    <string name="no_risk">Patient has no risk of a heart disease</string>
    <string name="ok">OK</string>


    <string-array name="gender_values">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name="cp_values">
        <item>Typical angina: chest pain related decrease blood supply to the heart</item>
        <item>Atypical angina: chest pain not related to heart</item>
        <item>Non-anginal pain: typically esophageal spasms (non heart related)</item>
        <item>Asymptomatic: chest pain not showing signs of disease</item>
    </string-array>

    <string-array name="fbs_values">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="restecg_values">
        <item>Nothing to note</item>
        <item>ST-T Wave abnormality</item>
        <item>Possible / Definite left ventricular hypertrophy</item>
    </string-array>

    <string-array name="exang_values">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="slope_values">
        <item>Upsloping: better heart rate with exercise</item>
        <item>Flatsloping: minimal change (typical healthy heart)</item>
        <item>Downslopins: signs of unhealthy heart</item>
    </string-array>

    <string-array name="ca_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="thal_values">
        <item>1,3: normal</item>
        <item>6: Fixed defect: Used to be defect but OK now</item>
        <item>7: Reversible defect: no proper blood movement when exercising</item>
    </string-array>

</resources>